# homelab

./: .envrc  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .roomodes  .sops.yaml  .tool-versions  .woodpecker.yml  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  go.mod  mkdocs.yml
.ai/stories/: cilium-1.18-upgrade.md  multi-cluster-clustermesh-plan.md
.ai/templates/: invariants.md
.claude/agents/: architect.md  developer.md  homelab-architect.md  memory-optimizer.md  n8n-workflow-builder.md  network-agent.md  security-agent.md  tiktok-strategist.md
.continue/docs/: homelab-docs.yaml
.continue/prompts/: homelab.prompt
.cursor/rules/: .arch.mdc  .dev.mdc  kubernetes.mdc  tech.mdc  terraform.mdc
.github/: CODEOWNERS  dependabot.yml  labeler.yaml  labeler.yml  labels.yaml  labels.yml
.github/prompts/: kubernetes.md
ansible/: Taskfile.yml  lxc-gluetun.conf
containers/: README.md  Taskfile.yml  compose.production.yaml  compose.yaml
docs/: .gitignore  .releaserc  Taskfile.yml  docusaurus.config.ts  hardware.md  index.md  mkdocs.yml  network.md  overview.md  package-lock.json  package.json  privacy.md  requirements.txt  sidebars.ts
kubernetes/: 03-gitops.gotmpl.yaml  Makefile  Taskfile.yml  defaults.yaml  environment.yaml  helmfile.yaml
machines/: Taskfile.yml
platform/: Taskfile.yml  compose.yaml
platform/security/: pyproject.toml
platform/security/scripts/: detect_arp_spoofing.py
scripts/: certify-platform.sh  check-gpu-passthrough.sh
terraform/: metrics-server.tf  portainer.tf  provider.tf  variables.tf  version.tf
(+910 files in other folders)
