[tool.poetry]
name = "soa_agent"
version = "0.1.0"
description = ""
authors = ["teaglebuilt <dillan.teagle.va@gmail.com>"]
readme = "README.md"
packages = [{ include = "lib" }]

[tool.poetry.dependencies]
python = "^3.11"
scapy = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
